EXM-51636: CR, use a static method instead of render initialization